--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "react": "^18.3.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
